--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,23 @@
   --color-brown-800: #4e342e;
   --color-brown-900: #3e2723;
 }
+
+.loader {
+  --width: 50px;
+  width: var(--width);
+  padding: calc(var(--width) / 6);
+  aspect-ratio: 1;
+  border-radius: 50%;
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: rotate 1s infinite linear;
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(1turn);
+  }
+}
